Bug 76979 - FILESAVE: Files are getting corrupted due to srgbClr value changes to auto
Summary: FILESAVE: Files are getting corrupted due to srgbClr value changes to auto
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
4.3.0.0.alpha0+ Master
Hardware: Other All
: medium normal
Assignee: Miklos Vajna
URL:
Whiteboard: target:4.3.0
Keywords:
Depends on:
Blocks:
 
Reported: 2014-04-03 05:36 UTC by Rohit Deshmukh
Modified: 2015-01-24 14:41 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
Original file (130.91 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2014-04-03 05:36 UTC, Rohit Deshmukh
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Rohit Deshmukh 2014-04-03 05:36:40 UTC
Created attachment 96822 [details]
Original file

Steps to reproduce:
1. Open file in LibreOffice
2. Save As (Microsoft word 2007/2010(.docx))
3. Open the round trip file in MS OFFICE.

Expected Result:
The file should open properly after round trip.

Actual Result:
It gives a message "The file cannot be opened because there are problems with the contents".
Comment 1 Miklos Vajna 2014-04-03 11:33:47 UTC
 c176cb8907530a795cb0e38de8193df931f891fb was still good, 95d7ebd22dd20da5a7a26000494b553944fc23ee is already bad, probably I broke it with one of my follow-up fixes to 6e61ecd09679a66060f932835622821d39e92f01 (Merge back branch alg_writerframes to trunk, 2014-03-19).
Comment 2 Commit Notification 2014-04-03 12:02:21 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=84c04d73e6f80120c2fc7d17dd12e3b68214a63b

fdo#76979 DOCX export: a:srgbClr should be always an explicit color



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 3 Miklos Vajna 2014-04-03 12:09:15 UTC
No backport, problem was master-only.